[package]
name = "dll-injector"
version = "0.1.0"
authors = ["user"]
edition = "2018"

[[example]]
name = "samplehook"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["windef", "winnt", "libloaderapi", "processthreadsapi", "memoryapi"]}

